fix textarea dark mode and change selection highlight color

--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,7 @@ a {
   color: #5aa2a7;
   border: solid 1px rgba(255, 255, 255, 0);
 }
+
 a.active {
   background: -webkit-linear-gradient(
     top,
@@ -104,4 +105,12 @@ a.active {
 .CodeMirror {
   border: 1px solid #eee;
   height: auto;
+}
+
+.CodeMirror-selected {
+    background: rgb(163, 248, 248) !important; 
+}
+.cmirror-dark{
+    background-color: #212121 !important;
+    color: #EEFFFF;
 }
